sumo/tests/sumo/errors/traffic_lights/loaded_phase_longer/errors.sumo
Warning: Unused states in tlLogic '0', program '1' in phase 0 after tl-index 11
